Add api POST /customers/{customer_id}/credit-limits

--- a/api/openapi/customer.yml
+++ b/api/openapi/customer.yml
@@ -88,7 +88,7 @@ components:
           type: number
           format: double
           description: "Monthly wage of the customer."
-          example: 5000.75
+          example: 5000000
 
     Message:
       type: object
