--- a/api/openapi/creditlimit.yml
+++ b/api/openapi/creditlimit.yml
@@ -18,6 +18,48 @@ servers:
         default: localhost:3000
 paths:
   /customers/{customerId}/credit-limits:
+    get:
+      summary: Get Initial Credit Limits
+      description: |
+        This endpoint retrieves the initial credit limits available for a specific customer,
+        categorized by different month ranges (tenors).
+        ```
+      operationId: GetInitialCreditLimit
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: customerId
+          in: path
+          required: true
+          description: Unique identifier of the customer.
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Initial credit limits retrieved successfully.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/TenorLimits"
+              example:
+                - monthRange: 1
+                  limitAmount: 1000000
+                - monthRange: 2
+                  limitAmount: 2000000
+                - monthRange: 3
+                  limitAmount: 3000000
+                - monthRange: 6
+                  limitAmount: 6000000
+        default:
+          description: Unexpected error occurred.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+              example:
+                code: "500"
+                message: "Internal Server Error"
+
     post:
       summary: Set Initial Credit Limit
       description: |
@@ -39,7 +81,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/InitialTenorLimits"
+              $ref: "#/components/schemas/TenorLimits"
             example:
               - monthRange: 1
                 limitAmount: 1000000
@@ -75,7 +117,7 @@ components:
       scheme: bearer
       bearerFormat: JWT
   schemas:
-    InitialTenorLimits:
+    TenorLimits:
       type: array
       description: List of initial credit limits for different tenor periods.
       items:
@@ -93,6 +135,10 @@ components:
             format: double
             description: Maximum credit limit for the given tenor.
             example: 15000000.00
+          usedAmount:
+            type: number
+            format: double
+            readOnly: true
 
     Message:
       type: object
